--- a/Client/src/Components/Header/Header.css
+++ b/Client/src/Components/Header/Header.css
@@ -1,9 +1,10 @@
 .header {
     overflow: hidden;
-    background-color: dodgerblue;
+    background-color: mediumslateblue;
     padding: 20px 10px;
     box-shadow: 1px 1px 1px grey;
     width: 100%;
+    margin: 0 !important;
 }
 
 .header a, canvas, Searchbar {
