Search bar modifications

--- a/Client/src/Components/Searchbar/Searchbar.css
+++ b/Client/src/Components/Searchbar/Searchbar.css
@@ -4,19 +4,25 @@
 
 .search-bar {
     position: relative;
-
 }
 
 .search-input {
     border-style: none;
-    width: 250px;
-    padding: 5px;
-    border-radius: 10px;
+    padding: 15px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    box-shadow: 1px 1px 1px darkslateblue;
+    width: 350px;
 }
 
 .search-button {
     border-radius: 10px;
-    padding: 5px;
+    padding: 14px;
     position: absolute;
-    z-index: 1;
+    border-radius: 10px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    box-shadow: 1px 1px 1px darkslateblue;
 }
