Working on downloading the file...

--- a/Client/src/Components/SearchResults/SearchResults.css
+++ b/Client/src/Components/SearchResults/SearchResults.css
@@ -71,3 +71,9 @@ h3 {
     background-color: dodgerblue;
     border-color: dodgerblue;
 }
+
+.jdenticon {
+    height: 50%;
+    width: 50%;
+    z-index: 2;
+}
