--- a/Client/src/Components/SearchResults/SearchResults.css
+++ b/Client/src/Components/SearchResults/SearchResults.css
@@ -7,7 +7,7 @@
 }
 
 .top-grid button {
-    background-color: dodgerblue;
+    background-color: #2b7a78;
     color: white;
     border-radius: 10px;
     margin-top: 1%;
@@ -31,8 +31,8 @@
 .grid-item {
     font-size: 15px;
     text-align: left;
+    margin-top: 5px;
 }
-
 
 
 .li-grid-container {
@@ -49,7 +49,7 @@
 }
 
 .li-grid-container:hover {
-    background-color: mediumslateblue;
+    background-color: #3aa3a9;
     color: white;
 }
 
@@ -64,12 +64,12 @@ h3 {
 
 .download-btn {
     border-radius: 10px;
+    padding: 5px 10px;
 }
 
 .download-btn:hover {
     color:white;
-    background-color: dodgerblue;
-    border-color: dodgerblue;
+    background-color: #2b7a78;
 }
 
 .jdenticon {
