--- a/Client/src/Components/Searchbar/Searchbar.css
+++ b/Client/src/Components/Searchbar/Searchbar.css
@@ -13,7 +13,7 @@
     border-bottom-left-radius: 10px;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
-    box-shadow: 1px 1px 1px #2b7a78;
+    box-shadow: 1px 1px 1px grey;
     width: 350px;
 }
 
@@ -24,5 +24,5 @@
     border-radius: 10px;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
-    box-shadow: 1px 1px 1px #2b7a78;
+    box-shadow: 1px 1px 1px grey;
 }
