--- a/Client/src/Components/Uploader/Uploader.css
+++ b/Client/src/Components/Uploader/Uploader.css
@@ -45,16 +45,16 @@
 .select-file-btn {
     display: inline-block;
     padding: 10px;
-    background: #def2f1;
+    background:#FFA500;
     cursor: pointer;
     border-radius: 5px;
-    color: #2b7a78;
+    color: white;
     box-shadow: 1px 1px 1px grey;
     width: 55%;
 }
 
-.select-file-btn button {
-
+.file-selector button {
+    color: yellow;
 }
 
 .select-file-btn:hover {
@@ -72,7 +72,7 @@
 .upload-btn {
     padding: 10px;
     border-radius: 5px;
-    box-shadow: 1px 1px 1px black;
+    box-shadow: 1px 1px 1px grey;
     margin-top: 20px;
 }
 
