--- a/Client/src/Components/SearchResults/SearchResults.css
+++ b/Client/src/Components/SearchResults/SearchResults.css
@@ -6,13 +6,13 @@
     margin-left: 10%;
 }
 
-.top-grid button {
-    background-color: #2b7a78;
-    color: white;
-    border-radius: 10px;
-    margin-top: 1%;
-    padding: 10px;
-}
+/*.top-grid button {*/
+    /*background-color: #2b7a78;*/
+    /*color: white;*/
+    /*border-radius: 10px;*/
+    /*margin-top: 1%;*/
+    /*padding: 10px;*/
+/*}*/
 
 .btn-grid {
     text-align: right;
@@ -22,8 +22,8 @@
     display: grid;
     grid-template-columns: auto auto auto auto;
     padding: 10px;
-    margin-right: 7%;
-    margin-left: 10%;
+    margin-right: 9%;
+    margin-left: 12%;
     border-bottom: black;
     border-bottom: 1px solid black;
 }
@@ -37,9 +37,9 @@
 
 .li-grid-container {
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    margin-right: 5%;
-    margin-left: 5%;
+    grid-template-columns: auto auto;
+    margin-right: 10%;
+    margin-left: 10%;
     background-color: #D3D3D3;
     padding: 15px;
     border-radius: 10px;
@@ -55,6 +55,7 @@
 
 h3 {
     margin-top: 1%;
+    margin-left: 5%;
 }
 
 .grid-item-download {
