--- a/Client/src/Components/Searchbar/Searchbar.css
+++ b/Client/src/Components/Searchbar/Searchbar.css
@@ -7,22 +7,26 @@
 }
 
 .search-input {
-    border-style: none;
-    padding: 15px;
+    padding: 10px;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
     box-shadow: 1px 1px 1px grey;
     width: 350px;
+    margin-left: 20%;
 }
 
 .search-button {
     border-radius: 10px;
-    padding: 14px;
+    padding: 11px;
     position: absolute;
     border-radius: 10px;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
     box-shadow: 1px 1px 1px grey;
+}
+
+.download-icon {
+    margin-right: 25px;
 }
