working header buttons. highlights the page you are currently on

--- a/Client/src/Components/Header/Header.css
+++ b/Client/src/Components/Header/Header.css
@@ -23,17 +23,17 @@
     font-weight: bold;
 }
 
-.header a:hover {
-    background-color: #2b7a78;
-    color: white;
-    height: 100%;
-    border-radius: 10px;
-}
+/*.header a:hover {*/
+    /*background-color: #2b7a78;*/
+    /*color: white;*/
+    /*height: 100%;*/
+    /*border-radius: 10px;*/
+/*}*/
 
 .header a:active {
     background-color: #2b7a78;
     color: white;
-    border-radius: 10px;
+    /*border-radius: 10px;*/
 }
 
 .header-right {
