--- a/Client/src/Components/SearchResults/SearchResults.css
+++ b/Client/src/Components/SearchResults/SearchResults.css
@@ -36,11 +36,12 @@
 
 
 .li-grid-container {
+    color: white;
     display: grid;
     grid-template-columns: auto auto;
     margin-right: 10%;
     margin-left: 10%;
-    background-color: #D3D3D3;
+    background-color: #3aa3a9;
     padding: 15px;
     border-radius: 10px;
     list-style-type: none;
@@ -49,7 +50,7 @@
 }
 
 .li-grid-container:hover {
-    background-color: #3aa3a9;
+    background-color: #FFA500;
     color: white;
 }
 
